# cf-cli-java-plugin

./: .gitignore  .golangci.yml  .markdownlint.json  CI-TESTING-INTEGRATION.md  CONTRIBUTING.md  CONTRIBUTING_USING_GENAI.md  LICENSE  Makefile  README.md  REUSE.toml  TESTING.md  cf-java-plugin.code-workspace  cf_cli_java_plugin.go  cf_cli_java_plugin_suite_test.go  cf_cli_java_plugin_test.go  go.mod  go.sum  setup-dev-env.sh
.github/workflows/: build-and-snapshot-enhanced.yml  build-and-snapshot.yml  build.py  generate_plugin_repo.py  plugin-repo.yml  pr-validation.yml  release.yml  test.yml  update_version.py
.reuse/: dep5
cmd/: cmd.go
cmd/fakes/: fake_command_executor.go
scripts/: README.md  lint-all.sh  lint-go.sh  lint-markdown.sh  lint-python.sh  update-readme-help.py
test/: .gitignore  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt  setup.sh  test.py  test_asprof.py  test_basic_commands.py  test_cf_java_plugin.py  test_config.yml.example  test_disk_full.py  test_jfr.py  test_jre21.py
test/apps/jre21/: manifest.yml
test/apps/sapmachine21/: manifest.yml
test/framework/: __init__.py  core.py  decorators.py  dsl.py  file_validators.py  pytest_stubs.pyi  runner.py
utils/: cf_java_plugin_util.go  cfutils.go  go.mod
utils/fakes/: fake_utils_impl.go
uuid/: uuid.go
uuid/fakes/: fake_uuid_generator.go
