# Pytest Configuration

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-java-plugin-tests"
description = "Test suite for CF Java Plugin"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.4.1",
    "pyyaml>=6.0",
    "pytest-xdist>=3.7.0",
    "pytest-html>=4.1.1",
    "colorama>=0.4.4",
    "python-Levenshtein>=0.25.0",
]

[tool.setuptools]
packages = ["framework"]
package-dir = { "" = "." }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--tb=short", "--strict-markers", "--strict-config", "--color=yes"]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["framework", "__pycache__", ".git", "venv"]
markers = [
    "all: runs on all Java versions",
    "sapmachine21: requires SapMachine 21",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "venv/*",
    "*/venv/*",
    "__pycache__/*",
    "*/__pycache__/*",
    ".git/*",
    "*/.git/*",
]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "*.egg-info",
    "build",
    "dist",
]
